index.html oldalszerkezet 1#

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <meta name="author" content="Vinczeffy_Gergely">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szlanka_Péter,Véghi_Dániel,Tegzes_Márton,Vinczeffy_Gergely</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <main>
-        <head></head>
-        <nav></nav>
+        <head><p>Auto kategoriák</p></head>
+        <nav>
+            <div><a href="index.html">Kezdőlap</a></div>
+            <div><a href="draga.html">Auto kategoriák drága</a></div>
+            <div><a href="olcso.html">Auto kategoriák olcso</a></div>
+        </nav>
         <article></article>
         <footer></footer>
     </main>
