index.html oldalszerkezet 2#

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div><a href="draga.html">Auto kategoriák drága</a></div>
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
-        <article></article>
-        <footer></footer>
+        <article>asda</article>
+        <footer>asd</footer>
     </main>
 </body>
 </html>
