--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
             <div><a href="draga.html">Auto kategoriák drága</a></div>
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
-        <article>asda</article>
-        <footer>asd</footer>
+        <article>
+            <div class="olcso">
+                <h1>Olcsó Autók</h1>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+            </div>
+        </article>
+        <footer></footer>
     </main>
 </body>
 </html>
