tema2.html - oldalszerkezet

--- a/olcso.html
+++ b/olcso.html
@@ -18,6 +18,14 @@
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
         <article>
+            <div class="olcso">
+                <h1>Olcsó Autók</h1>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+            </div>
         </article>
         <footer></footer>
     </main>
