--- a/olcso.html
+++ b/olcso.html
@@ -34,6 +34,8 @@
                 <div class="markak"><img src=""><p></p></div>
                 <div class="markak"><img src=""><p></p></div>
                 <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
+                <div class="markak"><img src=""><p></p></div>
             </div>
         </article>
         <footer></footer>
