--- a/draga.html
+++ b/draga.html
@@ -30,6 +30,7 @@
             <h2>Drága autók</h2>
             <div class="markak">
                 <div calss="kep">
+                    soigur
 
                 </div>
                 <p></p>
