--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szlanka_Péter,Véghi_Dániel,Tegzes_Márton,Vinczeffy_Gergely</title>
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="media_responsice.css">
 </head>
 <body>
     <main>
