--- a/olcso.html
+++ b/olcso.html
@@ -28,7 +28,7 @@
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
         <article>
-            <div class="olcso">
+            <div class="oldal">
                 <h1>Olcsó Autók</h1>
                 <div class="markak">
                     <div calss="kep">
