--- a/draga.html
+++ b/draga.html
@@ -28,6 +28,7 @@
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
         <article>
+        <div class="oldal">
             <h2>Drága autók</h2>
             <div class="markak">
                 <div calss="kep">
@@ -64,6 +65,7 @@
                 </div>
                 <p></p>
             </div>
+        </div>
         </article>
         <footer>
 
