--- a/draga.html
+++ b/draga.html
@@ -28,8 +28,10 @@
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
         <article>
+        <div class="cim">
+            <h1>Drága autók</h1>
+        </div>
         <div class="oldal">
-            <h2>Drága autók</h2>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/porse.png" alt="porse">
