tema2.html - oldalszerkezet

--- a/olcso.html
+++ b/olcso.html
@@ -28,8 +28,10 @@
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
         <article>
-            <div class="oldal">
+            <div class="cim">
                 <h1>Olcsó Autók</h1>
+            </div>
+            <div class="oldal">
                 <div class="markak">
                     <div calss="kep">
     
