tagok pozicioja és nick neve

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         </nav>
         <article>
         </article>
-        <footer></footer>
+        <footer><ul>
+            <li>Projektmanager:Vinczeffy Gergely(SnowGRH)</li>
+            <li>Designer:Szlanka Péter(szlankapeter)</li>
+            <li>Fejlesztő 1 :Tegzes_Márton(Warhair)</li>
+            <li>Fejlesztő 2: Véghi Dániel(Venz03)</li>
+        </ul></footer>
     </main>
 </body>
 </html>
