--- a/draga.html
+++ b/draga.html
@@ -36,36 +36,45 @@
                 <div calss="kep">
                     <img src="kepek/porse.png" alt="porse">
                 </div>
-                <p></p>
+                <p>A Porsche AG, vagy teljes nevén Dr. Ing. h.c. F. Porsche Aktiengesellschaft német autógyártó cég, amit 1931-ben Ferdinand Porsche alapított Stuttgartban műszaki tervezőirodaként. 
+                    A vállalat társasági formája az alapítás óta többször megváltozott, 1931-től 1937-ig Dr. Ing. h.c. F. Porsche GmbH(mj 1) néven, 1937-től 1972-ig Dr. Ing. h.c. F. Porsche KG(mj 2) néven működött, majd 1972-ben vált részvénytársasággá Dr. Ing. h.c. F. Porsche AG(mj 3) néven.
+                    A vállalat főhadiszállása Zuffenhausenben, Stuttgart külvárosi részében található. Itt jelenleg 911-et, Boxstert, Caymant gyártanak a Cayenne a Volkswagen AG dévényújfalui gyárában, míg a Macan a lipcsei Porsche gyárban készül.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/mercedes.png" alt="mercedes">
                 </div>
+                <p>A Mercedes-Benz német járműmárka a német Mercedes-Benz Group AG cég számos országban bejegyzett védjegye. Magyarországon a Mercedes-Benz Group leányvállalatának neve Mercedes-Benz Manufacturing Hungary.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/jaguar.png" alt="jaguar">
                 </div>
-                <p></p>
+                <p>A Jaguar (2013. január 1-je óta Jaguar Land Rover Limited, előtte Jaguar Cars Limited[1]) egy brit autómárka. 
+                    Székhelye eredetileg Browns Lane (Coventry, Egyesült Királyság), manapság pedig Whitley, (Coventry, Egyesült Királyság).
+                     A Jaguart Swallow Sidecar Company néven alapították 1922-ben; amely név 1934-ben SS Cars Ltd.-re változott, majd 1945-ben Jaguar Cars Ltd.-re. 
+                     Kezdetben motorkerékpár-oldalkocsikat készítettek. Az 1935-ben bemutatott, nagyobb teljesítményű modelleket már „S.S.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/ferrari.png" alt="ferrari">
                 </div>
-                <p></p>
+                <p>A Ferrari S.p.A. versenyautókat és nagy teljesítményű sportautókat készítő olaszországi autógyár. 
+                    A cég központja Maranellóban található. A gyárat Enzo Ferrari alapította 1929-ben Scuderia Ferrari (Ferrari versenyistálló) néven, ekkor még csak versenyautókat gyártott. 1947-ben gyártották első közúti sportautó modelljüket.
+                     Jelenleg az egyik legnagyobb presztízzsel rendelkező sportautómárka.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/dodge.png" alt="dodge">
                 </div>
-                <p></p>
+                <p>A Dodge egy amerikai autógyár, jelenleg a Fiat Chrysler Automobiles tagja. Személyautókat, illetve könnyű és nehéz SUV-kat gyárt.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/chrysler.png" alt="chrysler.png">
                 </div>
-                <p></p>
+                <p>A Chrysler Corporation egy amerikai autógyártó. 2014-től a Fiat Chrysler Automobiles holding része. 1925-től a Chrysler az USA három legjelentősebb autógyártója közül – a Ford, a General Motors és a mögött – többnyire a legkisebbik volt.
+                    Magyarországon legnépszerűbb modellje az Ausztriában is gyártott Chrysler Voyager.</p>
             </div>
         </div>
         </article>
