Kepek index feltolve anyagal

--- a/index.html
+++ b/index.html
@@ -28,6 +28,47 @@
             <div><a href="olcso.html">Auto kategoriák olcso</a></div>
         </nav>
         <article>
+            <div class="cim">
+                <h1>Drága autók</h1>
+            </div>
+            <div class="oldal">
+                <div class="markak">
+                    <div class="kep">
+                        <img src="kepek/porse.png" alt="porse">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate quod saepe quas voluptatum, veritatis quo aperiam culpa. Distinctio repellendus assumenda quod commodi quaerat ipsum, dolorum sint, repudiandae pariatur aut a. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla ratione, quidem dolores eum ut facere quos asperiores, voluptates est vitae quod quas esse odit temporibus nam modi, tenetur sunt voluptatibus.</p>
+                </div>
+                <div class="markak">
+                    <div class="kep">
+                        <img src="kepek/mercedes.png" alt="mercedes">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate quod saepe quas voluptatum, veritatis quo aperiam culpa. Distinctio repellendus assumenda quod commodi quaerat ipsum, dolorum sint, repudiandae pariatur aut a. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla ratione, quidem dolores eum ut facere quos asperiores, voluptates est vitae quod quas esse odit temporibus nam modi, tenetur sunt voluptatibus.</p>
+                </div>
+                <div class="markak">
+                    <div calss="kep">
+                        <img src="kepek/jaguar.png" alt="jaguar">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate quod saepe quas voluptatum, veritatis quo aperiam culpa. Distinctio repellendus assumenda quod commodi quaerat ipsum, dolorum sint, repudiandae pariatur aut a. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla ratione, quidem dolores eum ut facere quos asperiores, voluptates est vitae quod quas esse odit temporibus nam modi, tenetur sunt voluptatibus.</p>
+                </div>
+                <div class="markak">
+                    <div class="kepek">
+                        <img src="kepek/porsce_911.png" alt="porsce 911 fehér">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo dicta vero doloribus. Delectus necessitatibus dolorum veniam, minus mollitia quisquam explicabo voluptates debitis adipisci, porro aperiam nihil facilis totam aut velit.</p>
+                </div>
+                <div class="markak">
+                    <div class="kep">
+                        <img src="kepek/dodge.png" alt="dodge">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint repellendus delectus ex aspernatur hic, earum iure in. Eos animi quidem non quis corporis, vel eaque facilis esse quas. Sapiente, porro.</p>
+                </div>
+                <div class="markak">
+                    <div class="kep">
+                        <img src="kepek/chrysler.png" alt="chrysler.png">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corrupti asperiores delectus quam assumenda, dolore consequuntur ullam quos eaque eveniet amet voluptates dolorum exercitationem nesciunt temporibus inventore odio facere ut.</p>
+                </div>
+            </div>
         </article>
         <footer><ul>
             <li>Projektmanager:Vinczeffy Gergely(SnowGRH)</li>
