--- a/draga.html
+++ b/draga.html
@@ -36,7 +36,12 @@
                 <div calss="kep">
                     <img src="kepek/porse.png" alt="porse">
                 </div>
-                <p></p>
+                <p>A Porsche AG, vagy teljes nevén Dr. Ing. h.c. F. Porsche Aktiengesellschaft német autógyártó cég, amit 1931-ben Ferdinand Porsche alapított Stuttgartban műszaki tervezőirodaként.
+                     A vállalat társasági formája az alapítás óta többször megváltozott, 1931-től 1937-ig Dr. Ing. h.c. F. Porsche GmbH[mj 1] néven, 1937-től 1972-ig Dr. Ing. h.c. F. Porsche KG[mj 2] néven működött, majd 1972-ben vált részvénytársasággá Dr. Ing. h.c. F. Porsche AG[mj 3] néven.
+                    A vállalat főhadiszállása Zuffenhausenben, Stuttgart külvárosi részében található. Itt jelenleg 911-et, Boxstert, Caymant gyártanak a Cayenne a Volkswagen AG dévényújfalui gyárában, míg a Macan a lipcsei Porsche gyárban készül.
+                    „Egyesült Vas- és Acélművek”, így nevezte Ferry Porsche és mintegy 200 dolgozója a Gmündben (Karintia) található egykori fűrészüzem fabarakkjait, ahova a II. világháború alatt (1944) apa és fia a Dr. Ing. h.c. F. Porsche KG céget Stuttgart-Zuffenhausenből átköltöztette.
+                     Itt készült el 1948-ban az első Porsche, az 1. számú 356-os modell. A Porsche 356-ból 52 darabot állítottak össze Gmündben. 1949 nyarán egy tucat Porsche alkalmazott elkezdte a gyártás visszaköltöztetését Stuttgart-Zuffenhausenbe, a Reutter céghez albérletbe. 
+                     Zuffenhausenban aztán tovább folytatódott a Porsche sikertörténete. 1950 elején elindult a Porsche 356 sorozatgyártása. Az év végéig 400 autót sikerült elkészíteni. A Porsche gyártása folyamatosan bővült. A Porsche 911 1963-as bevezetése mérföldkövet jelentett a Porsche fejlődésében.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
@@ -47,25 +52,43 @@
                 <div calss="kep">
                     <img src="kepek/jaguar.png" alt="jaguar">
                 </div>
-                <p></p>
+                <p>A Mercedes-Benz német járműmárka a német Mercedes-Benz Group AG cég számos országban bejegyzett védjegye.
+                     Magyarországon a Mercedes-Benz Group leányvállalatának neve Mercedes-Benz Manufacturing Hungary. 
+                     Az 1890-ben alapított Daimler-Motoren-Gesellschaft (DMG) eredetileg nem Mercedes néven értékesítette járműveit.
+                      A márka csak a századfordulón jött létre, Jellinek Emil üzletember ihlette, aki 1898-tól kezdett kereskedni a Daimler járműveivel. 
+                      1899-től Jellinek Mercedes fedőnevet vette át (lánya neve Mercédès Jellinek alapján) részt vett többek között a nizzai versenyhéten.
+                       Noha a "Mercedest" akkoriban még csak járművezetőként használták, és még nem használták autó megnevezésként, a név a DMG kapcsán vált ismertté. 
+                       1900-ban a Jellinek beleegyezett az új, nagy teljesítményű "Daimler-Mercedes" motor gyártásába, amely először használta termék névként a Mercedes nevet. 
+                       \Ezzel párhuzamosan a Daimler autók és motorok értékesítési partnere lett, és 36 járművet rendelt összesen 550 001 márka áron (a mai érték szerint 3,82 millió euró körül), valamint néhány héttel később további 36 Daimler autót 8 lóerős motorral.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/ferrari.png" alt="ferrari">
                 </div>
-                <p></p>
+                <p>A Ferrari S.p.A. versenyautókat és nagy teljesítményű sportautókat készítő olaszországi autógyár. A cég központja Maranellóban található. 
+                    A gyárat Enzo Ferrari alapította 1929-ben Scuderia Ferrari (Ferrari versenyistálló) néven, ekkor még csak versenyautókat gyártott. 1947-ben gyártották első közúti sportautó modelljüket. Jelenleg az egyik legnagyobb presztízzsel rendelkező sportautómárka.
+                    A Ferrari cég ábrás védjegyét a „Cavallino Rampante”, azaz az „ágaskodó lovacska” néven emlegetik. A Ferrari emblémája egy sárga címerpajzson fekete ágaskodó lovat ábrázol, általában egy „S” és egy „F” betű társaságában, amely a „Scuderia Ferrari” név rövidítése. 
+                    Az embléma tetején az olasz zászló színei - zöld, fehér, piros - láthatóak.
+                </p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/dodge.png" alt="dodge">
                 </div>
-                <p></p>
+                <p>A Dodge egy amerikai autógyár, jelenleg a Fiat Chrysler Automobiles tagja. Személyautókat, illetve könnyű és nehéz SUV-kat gyárt.1901-ben John Francis Dodge és fivére, Horace Elgin Dodge átköltöztette a Dodge Brothers Bicycle & Machine Factory kerékpárgyárat a michigani Detroitba, az amerikai autóipar későbbi fővárosába.
+                    A fivérek csapágyaira nagy szüksége volt a gyerekcipőben járó autóiparnak, és a Dodge-testvérek egy pár korai Oldsmobile alkatrészének tervezésében is részt vett.
+                    1902-ben a Dodge Brotherst felkereste Henry Ford, aki egy saját autógyár megalapításához keresett finanszírozási segítséget. 
+                    A Dodge-fivérek segédletével Ford megalapította a Ford Motor Company-t, és a Dodge Brothers alkatrészeket gyártott a Fordnak.</p>
             </div>
             <div class="markak">
                 <div calss="kep">
                     <img src="kepek/chrysler.png" alt="chrysler.png">
                 </div>
-                <p></p>
+                <p>A Chrysler Corporation egy amerikai autógyártó. 2014-től a Fiat Chrysler Automobiles holding része. 1925-től a Chrysler az USA három legjelentősebb autógyártója közül - a Ford, a General Motors és a mögött - többnyire a legkisebbik volt.
+                    Magyarországon legnépszerűbb modellje az Ausztriában is gyártott Chrysler Voyager. 
+                    A Chrysler Corporationt Walter P. Chrysler alapította 1925. június 6-án, a tönk szélén álló Maxwell Motor Company vagyontárgyait átvéve.
+                    Walter Chrysler az 1920-as évek elején lépett be a már akkor gyengélkedő, 1904-ben alapított Maxwell-Chalmers Companyba. 1923-ban a Chalmers befejezte az autógyártást.
+                    1924 januárjában Walter Chrysler bemutatta az első Chrysler modellt, egy, a többinél olcsóbb, hathengeres autót. Az autót a New York-i Commodore Hotelben mutatták be.</p>
             </div>
         </div>
         </article>
