--- a/olcso.html
+++ b/olcso.html
@@ -36,37 +36,40 @@
                     <div calss="kep">
                         <img src="kepek/dani/kep1_200.jpg" alt="kocsi">
                     </div>
-                    <p>Lorem ipsum dolor sit amet.
+                    <p>Elso kocsi ami olcso
                     </p>
                 </div>
                 <div class="markak">
                     <div calss="kep">
                         <img src="kepek/dani/kep2_200.jpg" alt="kocsi">
                     </div>
+                        <p>
+                            Masodik kocsi ami olcso
+                        </p>
                 </div>
                 <div class="markak">
                     <div calss="kep">
                         <img src="kepek/dani/kep3_200.jpg" alt="kocsi">
                     </div>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Harmadik kocsi ami olcso</p>
                 </div>
                 <div class="markak">
                     <div calss="kep">
                         <img src="kepek/dani/kep4_200.jpg" alt="kocsi">
                     </div>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Negyedik kocsi ami olcso</p>
                 </div>
                 <div class="markak">
                     <div calss="kep">
                         <img src="kepek/dani/kep5_200.jpg" alt="kocsi">
                     </div>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Otodik kocsi ami olcso</p>
                 </div>
                 <div class="markak">
                     <div calss="kep">
                         <img src="kepek/dani/kep6_200.jpg" alt="kocsi">
                     </div>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Hatodik kocsi ami olcso</p>
                 </div>
         </article>
         <footer></footer>
